<?xml version="1.0"?>
<package format="2">
  <name>my_robot_controller</name>
  <version>0.0.0</version>
  <description>The my_robot_controller package</description>


  <maintainer email="superuser@todo.todo">superuser</maintainer>

  <license>TODO</license>


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
