<?xml version="1.0"?>
<package format="2">
  <name>my_best_controller</name>
  <version>0.0.0</version>
  <description>The my_best_controller package</description>

  <maintainer email="superuser@todo.todo">superuser</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
